# codebase

./: .gitignore
C++/: .clang-format  .gitignore  CMakeLists.txt  build.sh
C++/.cache/clangd/index/: ATM.cc.A5AC46E226C2896C.idx  EventLoop.cc.A673577E120A85B7.idx  EventLoop.h.7E60F247711DAAFA.idx  EventLoop_test01.cc.3112346481784FBD.idx  EventLoop_test02.cc.820EBB1E5D055685.idx  EventLoop_test03.cc.6FA36E554BB1A370.idx  List.cc.BDA4AB226790631F.idx  List.h.59B3CEBF5F0C14DD.idx  ListIteraor.h.D8A8857A249317CC.idx  ListNode.h.0C1D558A0FBB29FB.idx  RefCounter.cc.20D3EA885C7EBB22.idx  RefCounter.h.296667AE080FD62D.idx  String.cc.6A30EAC21C9F9E36.idx  String.h.E168D602B963FC92.idx  Thread.cc.5E4EBD326B7F5044.idx  Thread.h.5829DC699C46C5A8.idx  ThreadPool.cc.DF285FC42B4FA087.idx  ThreadPool.h.BDF5739675C5440B.idx  ThreadPool_benchmark.cc.B5BB3803C898B5B6.idx  ThreadPool_test.cc.9856BB2BCA186EC5.idx  Vector.cc.92AFF3FF34423656.idx  Vector.h.1524B587E53854C3.idx  basic_benchmark.cc.BC5629B090C1EBE8.idx  basic_test.cc.F99BBB81A8AE1326.idx  c++11_thread_pooled_test.cc.925516A235CDB970.idx  chrono_duration_test.cc.B404DB482306E58C.idx  client.cc.1C8EC7BEA098DC24.idx  concurrentqueue.h.6FA3EDF8324094FE.idx  concurrentqueue_test.cc.4BE0A590C29BB1BF.idx  doSomething.cc.B1B765BEEA89D604.idx  epoll.cc.E26C42BFFCA82CB5.idx  epoll_read_and_write_test.cc.55BC3397A7C01009.idx  item34_prefer_lambda_to_bind.cc.659FE8E37C2410DA.idx  lauch_thread_performance_test.cc.2E48740362E9DB9C.idx  lock_free_queue.cc.D3358C9915515397.idx  lock_free_queue.h.9EB2A3453D8F0511.idx  log_test.cc.9C99430AAE6AC39D.idx  managing_thread.cc.8B18A1E05B8C5D01.idx  mem_model_and_atomic_type.cc.CC596D5F343286CB.idx  noncopyable.cc.A63797C7E89486E8.idx  (+14 more)
C++/cmake/: utils.cmake
C++/codebase/STL/: List.cc  List.h  ListIteraor.h  ListNode.h  RefCounter.cc  RefCounter.h  String.h  Vector.cc  Vector.h  hash_map.h  smart_ptr.h  utils.cc
C++/codebase/basic/: CMakeLists.txt  array_test  array_test.cc  chrono_duration_test.cc  doSomething.cc  inline_test_inline  inline_test_noInline  static_const_int.cc  static_const_int.h  static_const_int_test.cc  thread_run_test.cc
C++/codebase/concurrent/: CMakeLists.txt  ThreadPool.cc  ThreadPool.h
C++/codebase/concurrent/examples/: ATM.cc  CMakeLists.txt  managing_thread.cc  mem_model_and_atomic_type.cc  sharing_data_between_thread.cc  synchronizing_concurrent_operation.cc
C++/codebase/concurrent/tests/: CMakeLists.txt  ThreadPool_benchmark.cc  ThreadPool_test.cc  c++11_thread_pooled_test.cc  concurrentqueue_test.cc  inline_test.cc  lauch_thread_performance_test.cc  lightweightsemaphore.h  readerwriterqueue_test.cc
C++/codebase/datastructure/: List.h  lock_free_queue.cc  lock_free_queue.h
C++/codebase/design_patterns/: singleton.cc  singleton.h
C++/codebase/effective/: CMakeLists.txt  effective11.cc  effective13.cc  effective14.cc  effective18.cc  effective24.cc  effective25.cc  effective27.cc  effective28.cc  effective29.cc  effective33.cc  effective34.cc  effective35.cc  effective36.cc  effective37.cc  effective39.cc  effective40.cc  effective43.cc  effective46.cc  effective48.cc  effective49.cc  effective5.cc  effective52.cc  effective9.cc  effective_ch1.cc
C++/codebase/effectivemodern/: CMakeLists.txt  item34_prefer_lambda_to_bind.cc
C++/codebase/log/tests/: CMakeLists.txt
C++/codebase/moreeffective/: CMakeLists.txt  item1.cc  item10.cc  item14.cc  item17.cc  item2.cc  item21.cc  item25.cc  item26.cc  item27.cc  item28.cc  item29.cc  item3.cc  item30.cc  item31.cc  item4.cc  item5.cc  item6.cc  item7.cc  item8.cc
C++/codebase/random_number/: random_number.cc  random_number.h
C++/codebase/server/: CMakeLists.txt  Thread.cc  Thread.h  client.cc  daemonize.cc  epoll.cc  epoll_read_and_write_test.cc  poll.cc  select.cc
C++/codebase/server/reactor/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  CMakeLists.txt  Callbacks.h  Channel.cc  Channel.h  Connector.cc  Connector.h  EPoller.cc  EPoller.h  EventLoop.cc  EventLoop.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  InetAddress.cc  InetAddress.h  Socket.cc  Socket.h  SocketsOps.cc  SocketsOps.h  TcpClient.cc  TcpClient.h  TcpConnection.cc  TcpConnection.h  TcpServer.cc  TcpServer.h  Timer.cc  Timer.h  TimerId.h  TimerQueue.cc  TimerQueue.h  log.h
C++/codebase/server/reactor/tests/: CMakeLists.txt  Connector_test.cc  EventLoop_test01.cc  EventLoop_test02.cc  EventLoop_test03.cc  TcpClient_test.cc  TcpServer_test.cc  log_test.cc  reactor_test.cc  reactor_test01.cc  reactor_test02.cc
C++/codebase/server/reactor_00/: EventHandler.cc  EventHandler.h  Handle.cc  Handle.h  InitiationDispatcher.cc  InitiationDispatcher.h  SynchronousEventDemultiplexer.cc  SynchronousEventDemultiplexer.h  reactor.h  reactor_test.cc  utils.h
C++/codebase/utils/: noncopyable.h  utils.h
C++/tests/: List_test.cc  bitset_test.cc  explicit_test.cc  lock_free_queue_test.cc  mmap_test.cc  noncopyable_test.cc  singleton_test.cc  test.cc  test_String.cc  test_Vector.cc  test_allocator.cc  test_coroutine.cc  test_equality_comparable.cc  test_function_bind.cc  test_random_number.cc  test_server_Thread.cc  test_smart_ptr.cc  test_stl.cc  test_tuple.cc  test_ucontext.cc  test_virtual_func.cc
C++/tests/benchmark_examples/: CMakeLists.txt
C++/tests/benchmark_examples/basic_examples/: CMakeLists.txt  basic_benchmark.cc
C++/tests/googletest_examples/basic_examples/: CMakeLists.txt  basic_test.cc
CMake/build_type/: CMakeLists.txt  hello.cc
CMake/compile_flags/: CMakeLists.txt  hello.cc
CMake/cpp_std/: CMakeLists.txt  main.cc
CMake/hello_cmake/: CMakeLists.txt
CMake/installing/: CMakeLists.txt
CMake/installing/src/: Hello.cc  main.cc
CMake/shared_library/: CMakeLists.txt
CMake/shared_library/include/shared/: Hello.h
CMake/shared_library/src/: Hello.cc  main.cc
CMake/static_library/: CMakeLists.txt
CMake/static_library/src/: Hello.cc  main.cc
ragel/: test_atoi  test_atoi.rl  test_atoi.rl.cc  test_foo_bar  test_foo_bar.rl  test_foo_bar.rl.cc  test_union  test_union.rl  test_union.rl.cc
(+142 files in other folders)
