add_executable(effective_ch1 effective_ch1.cc)
target_link_libraries(effective_ch1 pthread)

add_executable(effective5 effective5.cc)
target_link_libraries(effective5 pthread)

add_executable(effective9 effective9.cc)
target_link_libraries(effective9 pthread)

add_executable(effective11 effective11.cc)
target_link_libraries(effective11 pthread)

add_executable(effective13 effective13.cc)
target_link_libraries(effective13 pthread)

add_executable(effective14 effective14.cc)
target_link_libraries(effective14 pthread)

add_executable(effective18 effective18.cc)
target_link_libraries(effective18 pthread)

add_executable(effective24 effective24.cc)
target_link_libraries(effective24 pthread)

add_executable(effective25 effective25.cc)
target_link_libraries(effective25 pthread)

add_executable(effective27 effective27.cc)
target_link_libraries(effective27 pthread)

add_executable(effective28 effective28.cc)
target_link_libraries(effective28 pthread)

add_executable(effective29 effective29.cc)
target_link_libraries(effective29 pthread)

add_executable(effective33 effective33.cc)
target_link_libraries(effective33 pthread)

add_executable(effective34 effective34.cc)
target_link_libraries(effective34 pthread)

add_executable(effective35 effective35.cc)
target_link_libraries(effective35 pthread)

add_executable(effective36 effective36.cc)
target_link_libraries(effective36 pthread)

add_executable(effective37 effective37.cc)
target_link_libraries(effective37 pthread)

add_executable(effective39 effective39.cc)
target_link_libraries(effective39 pthread)

add_executable(effective40 effective40.cc)
target_link_libraries(effective40 pthread)

add_executable(effective43 effective43.cc)
target_link_libraries(effective43 pthread)

add_executable(effective46 effective46.cc)
target_link_libraries(effective46 pthread)

add_executable(effective48 effective48.cc)
target_link_libraries(effective48 pthread)

add_executable(effective49 effective49.cc)
target_link_libraries(effective49 pthread)

add_executable(effective52 effective52.cc)
target_link_libraries(effective52 pthread)