add_executable(item1 item1.cc)
target_link_libraries(item1 pthread)

add_executable(item2 item2.cc)
target_link_libraries(item2 pthread)

add_executable(item3 item3.cc)
target_link_libraries(item3 pthread)

add_executable(item4 item4.cc)
target_link_libraries(item4 pthread)

add_executable(item5 item5.cc)
target_link_libraries(item5 pthread)

add_executable(item6 item6.cc)
target_link_libraries(item6 pthread)

add_executable(item7 item7.cc)
target_link_libraries(item7 pthread)

add_executable(item8 item8.cc)
target_link_libraries(item8 pthread)

add_executable(item10 item10.cc)
target_link_libraries(item10 pthread)

add_executable(item14 item14.cc)
target_link_libraries(item14 pthread)

add_executable(item17 item17.cc)
target_link_libraries(item17 pthread)

add_executable(item21 item21.cc)
target_link_libraries(item21 pthread)

add_executable(item25 item25.cc)
target_link_libraries(item25 pthread)

add_executable(item26 item26.cc)
target_link_libraries(item26 pthread)

add_executable(item27 item27.cc)
target_link_libraries(item27 pthread)

add_executable(item28 item28.cc)
target_link_libraries(item28 pthread)

add_executable(item29 item29.cc)
target_link_libraries(item29 pthread)

add_executable(item30 item30.cc)
target_link_libraries(item30 pthread)

add_executable(item31 item31.cc)
target_link_libraries(item31 pthread)